<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="eMM_ResetCmdStatus" Id="{6c83cfa1-ed23-45e2-8dea-67135763a7e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eMM_ResetCmdStatus :
(
	eMM_ResetCmdSent,
	eMM_ResetCmdAck,
	eMM_ResetCmdRejected,
	eMM_ResetCmdComplete
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>